Add eDellRoot, DSDTestProvider, Superfish

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -272,6 +272,10 @@
       <hr class="hidden">
       <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.{{ site.domain }}/" class="good hidden">long-extended-subdomain-name-containing-many-letters-and-dashes</a>
       <a href="https://longextendedsubdomainnamewithoutdashesinordertotestwordwrapping.{{ site.domain }}/" class="good hidden">longextendedsubdomainnamewithoutdashesinordertotestwordwrapping</a>
+    <h2>Known Bad:</h2>
+      <a href="https://superfish.{{ site.domain }}/" class="bad">(Lenovo) Superfish</a>
+      <a href="https://edellroot.{{ site.domain }}/" class="bad">(Dell) eDellRoot</a>
+      <a href="https://dsdtestprovider.{{ site.domain }}/" class="bad">(Dell) DSD Test Provider</a>
     <div class="browser-info">
       <span id="ua"></span>
       <br>
