Don't include a favicon in the header for mixed-favicon.

--- a/domains/mixed/mixed-favicon/index.html
+++ b/domains/mixed/mixed-favicon/index.html
@@ -3,6 +3,8 @@ subdomain: mixed-favicon
 layout: page
 favicon: yellow
 background: rgb(246, 207, 47)
+
+no-favicon: no-favicon
 ---
 
 <div id="content">
