Clean descriptions, improve pages

--- a/domains/upgrade/https-everywhere-https/index.html
+++ b/domains/upgrade/https-everywhere-https/index.html
@@ -3,6 +3,8 @@ subdomain: https-everywhere
 layout: page
 ---
 
+<img id="http-vs-https" src="http://{{ page.subdomain }}.{{ site.domain }}/redirect-test/status.svg" title="This is an image with an HTTP source location specified. If HTTPS Everywhere is working and activated, the source should be rewritten to HTTPS. The image will vary depending on the outcome."><br>
+
 <div id="content">
   <h1 style="font-size: 9vw;">
     {{ page.subdomain }}.<br>{{ site.domain }}
