Clean descriptions, improve pages

--- a/domains/upgrade/https-everywhere-http/index.html
+++ b/domains/upgrade/https-everywhere-http/index.html
@@ -3,6 +3,8 @@ subdomain: https-everywhere
 layout: page
 ---
 
+<i>HTTPS Everywhere</i> does not work or is not enabled.<br>
+
 <div id="content">
   <h1 style="font-size: 7vw;">
     http://{{ page.subdomain }}.<br>{{ site.domain }}
