Add untrusted-root.badssl.com. Closes #170.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -216,6 +216,7 @@
       <a href="https://expired.{{ site.domain }}/" class="bad">expired</a>
       <a href="https://wrong.host.{{ site.domain }}/" class="bad">wrong.host</a>
       <a href="https://self-signed.{{ site.domain }}/" class="bad">self-signed</a>
+      <a href="https://untrusted-root.{{ site.domain }}/" class="bad">untrusted-root</a>
       <hr>
       <a href="https://sha1-2016.{{ site.domain }}/" class="dubious">sha1-2016</a>
       <a href="https://sha1-2017.{{ site.domain }}/" class="bad">sha1-2017</a>
