Add Edge regex to front page UA detection.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -151,6 +151,7 @@
 
     var regexes = [
 
+      [/^.*Edge\/([\d\.]*)\b.*$/, "Edge $1"],
       [/^.*Chrome\/([\d\.]*)\b.*$/, "Chrome $1"],
       [/^.*CriOS\/([\d\.]*)\b.*$/, "Chrome $1"],
       [/^.*Firefox\/([\d\.]*)\b.*$/, "Firefox $1"],
