Add static-rsa subdomain. Closes #189.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -245,7 +245,7 @@
       <a href="https://mozilla-old.{{ site.domain }}/" class="bad">mozilla-old</a>
       <a href="https://mozilla-intermediate.{{ site.domain }}/" class="dubious">mozilla-intermediate</a>
       <a href="https://mozilla-modern.{{ site.domain }}/" class="good">mozilla-modern</a>
-    <h2>Diffie-Hellman:</h2>
+    <h2>Key Exchange:</h2>
       <a href="https://dh480.{{ site.domain }}/" class="bad">dh480</a>
       <a href="https://dh512.{{ site.domain }}/" class="bad hidden">dh512</a>
       <a href="https://dh1024.{{ site.domain }}/" class="dubious">dh1024</a>
@@ -253,6 +253,8 @@
       <hr>
       <a href="https://dh-small-subgroup.{{ site.domain }}/" class="bad">dh-small-subgroup</a>
       <a href="https://dh-composite.{{ site.domain }}/" class="bad">dh-composite</a>
+      <hr>
+      <a href="https://static-rsa.{{ site.domain }}/" class="bad">static-rsa</a>
     <h2>Upgrade:</h2>
       <a href="https://hsts.{{ site.domain }}/" class="good">hsts</a>
       <a href="https://upgrade.{{ site.domain }}/" class="good">upgrade</a>
