Tell compatible browser to load the white icons ahead of time.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="github-ribbon.css">
   <script src="index.js"></script>
+
+  <link rel=preload as=image href="bad-white.svg">
+  <link rel=preload as=image href="dubious-white.svg">
+  <link rel=preload as=image href="good-white.svg">
 </head>
 <body>
 
