revoked.badssl.com: update text now that the cert has actually been revoked.

--- a/domains/cert/revoked/index.html
+++ b/domains/cert/revoked/index.html
@@ -12,5 +12,5 @@ background: red
 </div>
 
 <div id="footer">
-  The leaf certificate for this site is intended to be revoked.
+  The leaf certificate for this site has been revoked.
 </div>
