--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -118,7 +118,7 @@
 </h2>
 
 <!-- Start of GitHub ribbon. -->
-<div class="github-fork-ribbon-wrapper right-bottom">
+<div class="github-fork-ribbon-wrapper right-top-bottom">
     <div class="github-fork-ribbon">
         <a href="https://github.com/chromium/badssl.com"><span class="icon"></span>On GitHub</a>
     </div>
