Add `revoked` to the front page. Closes #210.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -32,6 +32,7 @@
     <a href="https://wrong.host.{{ site.domain }}/" class="bad"><span class="icon"></span>wrong.host</a>
     <a href="https://self-signed.{{ site.domain }}/" class="bad"><span class="icon"></span>self-signed</a>
     <a href="https://untrusted-root.{{ site.domain }}/" class="bad"><span class="icon"></span>untrusted-root</a>
+    <a href="https://revoked.{{ site.domain }}/" class="bad"><span class="icon"></span>revoked</a>
     <a href="https://incomplete-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>incomplete-chain</a>
     <hr>
     <a href="https://sha1-2016.{{ site.domain }}/" class="dubious"><span class="icon"></span>sha1-2016</a>
