Fix front page icon rel=preload hrefs.
This got out of sync in c5b34b91ae5e1e9a560fad6e34c37f37aefd2b03.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="github-ribbon.css">
   <script src="index.js"></script>
 
-  <link rel=preload as=image href="bad-white.svg">
-  <link rel=preload as=image href="dubious-white.svg">
-  <link rel=preload as=image href="good-white.svg">
+  <link rel=preload as=image href="front-page-icons/bad-white.svg">
+  <link rel=preload as=image href="front-page-icons/dubious-white.svg">
+  <link rel=preload as=image href="front-page-icons/good-white.svg">
 </head>
 <body>
 
