--- a/common/input/credit-card/index.html
+++ b/common/input/credit-card/index.html
@@ -10,9 +10,8 @@ background: gray
   </h1>
   <br><br><br>
   <form method="post">
-    <input type="text" id="cc-name" placeholder="Cardholder" value="" /><br />
-    <input type="text" id="cc-number" placeholder="credit input field" value="" maxlength=17 /><br />
+    <input type="text" id="cc-name" placeholder="cardholder" value=""/><br>
+    <input type="text" id="cc-number" placeholder="credit card number" value="" maxlength=17/><br>
     <input type="text" id="cc-csc" placeholder="csc" value="" maxlength=4/>
-    
   </form>
 </div>
