--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -89,10 +89,16 @@
     <a href="https://https-everywhere.{{ site.domain }}/" class="good hidden"><span class="icon"></span>https-everywhere</a>
   </div>
   <div class="group">
+    <h2 id="miscellaneous"><span class="emoji">✏️</span>HTTP Input</h2>
+    <a href="http://http-password.{{ site.domain }}/" class="bad"><span class="icon"></span>http-password</a>
+    <a href="http://http-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-login</a>
+    <a href="http://http-dynamic-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-dynamic-login</a>
+    <a href="http://http-credit-card.{{ site.domain }}/" class="bad"><span class="icon"></span>http-credit-card</a>
+  </div>
+  <div class="group">
     <h2 id="miscellaneous"><span class="emoji">💬</span>Miscellaneous</h2>
     <a href="http://http.{{ site.domain }}/" class="dubious"><span class="icon"></span>http</a>
     <a href="https://spoofed-favicon.{{ site.domain }}/" class="dubious hidden"><span class="icon"></span>spoofed-favicon</a>
-    <a href="https://http-password.{{ site.domain }}/" class="bad"><span class="icon"></span>http-password</a>
     <a href="https://pinning-test.{{ site.domain }}/" class="bad"><span class="icon"></span>pinning-test</a>
     <hr class="hidden">
     <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.{{ site.domain }}/" class="good hidden"><span class="icon"></span>long-extended-subdomain-name-containing-many-letters-and-dashes</a>
