--- a/domains/input/http-credit-card/index.html
+++ b/domains/input/http-credit-card/index.html
@@ -1,7 +1,8 @@
 ---
+subdomain: http-credit-card
 layout: page
-favicon: gray
-background: gray
+favicon: red
+background: red
 ---
 
 <style>
@@ -12,7 +13,7 @@ background: gray
 
 <div id="content">
   <h1 style="font-size: 5vw;">
-    credit-card
+    {{ page.subdomain }}.<br>{{ site.domain }}
   </h1>
   <br><br><br>
   <form>
