Add 3des. Closes #229.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -57,6 +57,7 @@
     <a href="https://cbc.{{ site.domain }}/" class="dubious"><span class="icon"></span>cbc</a>
     <a href="https://rc4-md5.{{ site.domain }}/" class="bad hidden"><span class="icon"></span>rc4-md5</a>
     <a href="https://rc4.{{ site.domain }}/" class="bad"><span class="icon"></span>rc4</a>
+    <a href="https://3des.{{ site.domain }}/" class="bad"><span class="icon"></span>3des</a>
     <a href="https://null.{{ site.domain }}/" class="bad hidden"><span class="icon"></span>null</a>
     <hr>
     <a href="https://mozilla-old.{{ site.domain }}/" class="bad"><span class="icon"></span>mozilla-old</a>
