--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -35,7 +35,7 @@
     <a href="https://revoked.{{ site.domain }}/" class="bad"><span class="icon"></span>revoked</a>
     <a href="https://incomplete-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>incomplete-chain</a>
     <hr>
-    <a href="https://sha1-2016.{{ site.domain }}/" class="dubious"><span class="icon"></span>sha1-2016</a>
+    <a href="https://sha1-2016.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-2016</a>
     <a href="https://sha1-2017.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-2017</a>
     <a href="https://sha256.{{ site.domain }}/" class="good"><span class="icon"></span>sha256</a>
     <hr>
